--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,68 +1,84 @@
 body {
-    padding-top:70px;
+  padding-top: 70px;
 }
 
-h1, h2, h3, h4,
+h1,
+h2,
+h3,
+h4,
 strong {
-  font-family: 'Kaushan Script', cursive;
+  font-family: "Kaushan Script", cursive;
 }
 
-.navbar-brand{
-    padding: 5px 15px;
+.navbar-brand {
+  padding: 5px 15px;
 }
-.navbar-brand img{
+.navbar-brand img {
   height: 40px;
 }
 
 .navbar-brand h1 {
-    font-size: 1.7rem;
-    margin: 2% auto;
+  font-size: 1.7rem;
+  margin: 2% auto;
 }
 
-.navbar-right{
+.navbar-right {
   padding-right: 1%;
 }
-.navbar-default .navbar-nav>li>a {
+.navbar-default .navbar-nav > li > a {
   margin-top: 8px;
   margin-bottom: 8px;
 }
 
-.cookies {
-    margin-top:1em;
+.text-light {
+  color: aliceblue !important;
 }
 
-section.cookies{
-  min-height: 90vH;
+.cartQty {
+  display: flex;
+  justify-content: space-around;
+}
+
+.cartQty > p {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.cookies {
+  margin-top: 1em;
+}
+
+section.cookies {
+  min-height: 90vh;
 }
 /* Source : https://bootsnipp.com/snippets/featured/sign-in-panel */
 .panel-heading {
-    padding: 5px 15px;
+  padding: 5px 15px;
 }
 
 .panel-footer {
-	padding: 1px 15px;
-	color: #A0A0A0;
+  padding: 1px 15px;
+  color: #a0a0a0;
 }
 
 .profile-img {
-	width: 96px;
-	height: 96px;
-	margin: 0 auto 10px;
-	display: block;
-	-moz-border-radius: 50%;
-	-webkit-border-radius: 50%;
-	border-radius: 50%;
+  width: 96px;
+  height: 96px;
+  margin: 0 auto 10px;
+  display: block;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
 }
 
-@media screen and ( min-width:768px ){
-
+@media screen and (min-width: 768px) {
   body {
-      padding-top:120px;
+    padding-top: 120px;
   }
 
   .navbar-brand h1 {
-      font-size: 2.3rem;
-      margin: 4% auto;
+    font-size: 2.3rem;
+    margin: 4% auto;
   }
 
   .navbar-brand img {
